--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <li><a href="eula.html">利用規約</a></li>
     </ul>
     <hr>
-      <a href="../index.html">トップに戻る</a>
+      <a href="../">トップに戻る</a>
 </body>
 </html>
