--- a/list.html
+++ b/list.html
@@ -13,6 +13,6 @@
   <ul>
     <li><a href="list/EX000000.html">EX000000</li>
   <hr>
-    <a href="../index.html">トップに戻る</a>
+    <a href="../">トップに戻る</a>
 </body>
 </html>
