--- a/list/example.html
+++ b/list/example.html
@@ -12,6 +12,6 @@
     <div>このページは移行されています。</div>
     <a href="EX000000.html">移行先</a>
   <hr>
-   <a href="../index.html">トップに戻る</a>
+   <a href="../">トップに戻る</a>
 </body>
 </html>
