--- a/list.html
+++ b/list.html
@@ -11,7 +11,7 @@
   <hr>
   <p>
   <ul>
-    <li><a href="list/EX000000.html">EX000000</li>
+    <li><a href="list/EX000000.html">EX000000</a></li>
   </ul>
   <hr>
     <a href="../">トップに戻る</a>
