--- a/list.html
+++ b/list.html
@@ -14,6 +14,6 @@
     <li><a href="list/EX000000.html">EX000000</a></li>
   </ul>
   <hr>
-    <a href="../">トップに戻る</a>
+    <a href="../home">トップに戻る</a>
 </body>
 </html>
