--- a/list/EX000000.html
+++ b/list/EX000000.html
@@ -43,6 +43,6 @@
           <td>無期限</td>
       </tr>
       <hr>
-        <a href="../">トップに戻る</a>
+        <a href="../home">トップに戻る</a>
 </body>
 </html>
