--- a/list/EX000000.html
+++ b/list/EX000000.html
@@ -42,6 +42,7 @@
           <th>失効期限</th>
           <td>無期限</td>
       </tr>
+    </table>
       <hr>
         <a href="../home">トップに戻る</a>
 </body>
