--- a/list.html
+++ b/list.html
@@ -7,11 +7,10 @@
     <title>List | MCLicense</title>
 </head>
 <body>
-  <h3>登録作品一覧</h3>
+  <h3>一覧</h3>
   <hr>
-  <p>
   <ul>
-    <li><a href="list/EX000000.html">EX000000</a></li>
+    <li><a href="list/example.html">Example</a></li>
   </ul>
   <hr>
     <a href="../home">トップに戻る</a>
