--- a/list/example.html
+++ b/list/example.html
@@ -7,11 +7,60 @@
     <title>Example | MCLicense</title>
 </head>
 <body>
-  <h3>301 Moved Parmanently</h3>
-  <hr>
-    <div>このページは移行されています。</div>
-    <a href="EX000000.html">移行先</a>
-  <hr>
-   <a href="../">トップに戻る</a>
+    <h3>Example</h3>
+    <hr>
+    <div>注意:登録番号や種類、Java版/統合版などにいくつか記載されていますが、これはパターンです。</div>
+    <div>また、これはWorldであればWL000000、TextureであればTX000000のようになります。</div>
+    <b>基本情報</b>
+    <table border="1">
+      <tr>
+          <th>登録番号</th>
+          <td>WL000000</td>
+          <td>TX000000</td>
+          <td>BH000000</td>
+          <td>AD000000</td>
+          <td>MD000000</td>
+          <td>SK000000</td>
+          <td>SV000000</td>
+      </tr>
+      <tr>
+          <th>件名</th>
+          <td>Example</td>
+      </tr>
+      <tr>
+          <th>種類</th>
+          <td>World</td>
+          <td>Texture</td>
+          <td>Behavior</td>
+          <td>Addon</td>
+          <td>Mod</td>
+          <td>Skin</td>
+          <td>Server</td>
+      </tr>
+      <tr>
+          <th>Java版/統合版</th>
+          <td>Java版</td>
+          <td>統合版</td>
+      </tr>
+    </table>
+    <b>詳細情報</b>
+    <table border="1">
+      <tr>
+          <th>登録日</th>
+          <td>20XX年X月X日</td>
+      </tr>
+      <tr>
+          <th>最終更新日</th>
+          <td>20XX年Y月Y日</td>
+      </tr>
+      <tr>
+          <th>失効期限</th>
+          <td>20XX年Z月Z日</td>
+          <td>一時期的に期限なし</td>
+          <td>無期限</td>
+      </tr>
+    </table>
+      <hr>
+        <a href="../">トップに戻る</a>
 </body>
 </html>
