--- a/list/EX000000.html
+++ b/list/EX000000.html
@@ -7,43 +7,11 @@
     <title>Example | MCLicense</title>
 </head>
 <body>
-    <h3>Example</h3>
-    <hr>
-    <b>基本情報</b>
-    <table border="1">
-      <tr>
-          <th>登録番号</th>
-          <td>EX000000</td>
-      </tr>
-      <tr>
-          <th>作品名</th>
-          <td>Example</td>
-      </tr>
-      <tr>
-          <th>種類</th>
-          <td>Example</td>
-      </tr>
-      <tr>
-          <th>Java版/統合版</th>
-          <td>Java版</td>
-      </tr>
-    </table>
-    <b>詳細情報</b>
-    <table border="1">
-      <tr>
-          <th>登録日</th>
-          <td>2023年3月12日</td>
-      </tr>
-      <tr>
-          <th>最終更新日</th>
-          <td>2023年3月12日</td>
-      </tr>
-      <tr>
-          <th>失効期限</th>
-          <td>無期限</td>
-      </tr>
-    </table>
-      <hr>
-        <a href="../">トップに戻る</a>
+  <h3>301 Moved Parmanently</h3>
+  <hr>
+    <div>このページは移行されています。</div>
+    <a href="example.html">移行先</a>
+  <hr>
+   <a href="../">トップに戻る</a>
 </body>
 </html>
